// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summer Should fetch, watch and render Github users 1`] = `
<div>
  Rerenderd: 
  3
   
</div>
`;

exports[`Summer Should just log error 1`] = `
<div>
  Rerenderd: 
  2
   
  {"users":"error"}
</div>
`;

exports[`Summer Should just render child component 1`] = `
<div>
  Rerenderd: 
  1
</div>
`;
